--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-sourcemaps": "^2.6.4"
   },
   "dependencies": {
-    "bootstrap": "^4.1.3"
+    "bootstrap": "^4.1.3",
+    "npm": "^6.4.1"
   }
 }
